Tests passing, tests set to use NODE_ENV test. Test in place for mongoose

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <script src="js/controllers/main.js"></script>
     <script src="js/services/players.js"></script>
     <script src="js/core.js"></script>
-    <title>Table Tennis LADder</title>
+    <title>Sports Ladder</title>
   </head>
   <body ng-controller="mainController">  
-    <h1>Table Tennis LADr</h1>
+    <h1>Sports Ladder</h1>
     <table class="table table-hover">
     <thead>
       <tr>
