Add player rank to model, display on index, tests passing

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </thead>
     <tbody ng-repeat="player in players">
       <tr>
-        <td></td>
+        <td> {{ player.rank }} </td>
         <td> {{ player.name }} </td>
       </tr>
     </tbody>
