Establish test for form to update rank

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       </tr>
     </thead>
     <tbody ng-repeat="player in players">
-      <tr>
+    <tr class="{{player.name}}">
         <td> {{ player.rank }} </td>
         <td> {{ player.name }} </td>
       </tr>
