--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <table class="table table-hover">
     <thead>
       <tr>
-        <th class="col-md-6">#</th>
+        <th class="col-md-6">Rank</th>
         <th class="col-md-6">Name</th>
       </tr>
     </thead>
@@ -27,14 +27,22 @@
     </tbody>
     </table>
     <noplayers ng-hide="players">There are no players</noplayers>
-    <form id="addplayer" class="col-lg-6">
-      <input name="name" placeholder="Name" class="form-control col-md-4" type="text" ng-model="formData.name">
-      <button class="btn btn-default btn-primary" type="submit" value="Add Player" ng-click="createPlayer()">Add Player</button>
-    </form>
+    <div class="row">
+      <div class="col-lg-6">
+        <form id="addplayer">
+          <div class="input-group">
+            <input name="name" placeholder="Name" class="form-control col-md-4" type="text" ng-model="formData.name">
+            <span class="input-group-btn">
+              <button class="btn btn-default btn-primary" type="submit" value="Add Player" ng-click="createPlayer()">Add Player</button>
+            </span>
+          </div>
+        </form>
+      </div>
+    </div>
     <form id="update-rank" class="col-lg-6">
-      <input name="winner" placeholder="Winner..." class="form-control col-md-4" type="text" ng-model="formData.winner">
-      <input name="loser" placeholder="Loser..." class="form-control col-md-4" type="text" ng-model="formData.loser">
-      <button class="btn btn-default btn-primary" type="submit" value="Update Ladder" ng-click="updateLadder()">Update Ladder</button>
+      <input name="winner" placeholder="Player 1" class="form-control col-md-4" type="text" ng-model="formData.winner">
+      <input name="loser" placeholder="Player 2" class="form-control col-md-4" type="text" ng-model="formData.loser">
+      <button class="btn btn-default btn-primary" type="submit" value="Update Ladder" ng-click="updateLadder()">Swap</button>
     </form>
   </body>
 </html>
