About to merge development branch

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         <form id="addplayer">
           <div class="input-group">
             <input name="name" placeholder="Name" type="text" ng-model="formData.name">
-              <button class="btn btn-default btn-primary" type="submit" value="Add Player" ng-click="createPlayer()">Add Player</button>
+              <button class="button" type="submit" value="Add Player" ng-click="createPlayer()">Add Player</button>
           </div>
         </form>
     <form id="update-rank" class="col-lg-6">
