Change background image

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <title>Sports Ladder</title>
   </head>
   <body ng-controller="mainController">  
+    <img src="images/Title.jpg">
     <h1>sportslad</h1>
     <table id="ladder">
       <tbody ng-repeat="player in players">
