--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,9 @@
     </form>
         <form id="addplayer">
           <div class="input-group">
-            <input id="input_name" name="name" placeholder="Enter Name..." type="text" ng-model="formData.name">
-              <button class="button" type="submit" value="Add Player" ng-click="createPlayer()">Add Player</button>
+            <input id="input_name" name="name" placeholder="Enter Name..." type="text" ng-model="formData.name"/>
+            <input type="hidden" name="count" value="5" ng-model="formData.count"/>
+              <button class="button" type="submit" value="Add Player" ng-click="createPlayer(formData)">Add Player</button>
           </div>
         </form>
   </body>
