--- a/public/index.html
+++ b/public/index.html
@@ -15,32 +15,37 @@
     <img src="images/Title.jpg">
     <h1>sportslad</h1>
     <table id="ladder">
-      <tbody ng-repeat="player in players">
-        <tr class="{{player.name}}" id="ladder_row">
-          <td id="rank"> {{ player.rank }} </td>
-          <td id="name"> {{ player.name }} </td>
-          <td id="rank" class="rankright"> {{ player.rank }} </td>
+      <tbody>
+        <tr ng-repeat="player in players" class="{{player.name}}" id="ladder_row">
+          <td id="rank" ng-bind="player.rank"></td>
+          <td id="name" ng-bind="player.name"></td>
+          <td id="rank" class="rankright" ng-bind="player.rank"></td>
         </tr>
+<!--         <tr id="ladder_row" ng-show="newPlayer.name">
+          <td id="rank"> {{ newPlayerRank() }} </td>
+          <td id="name"> {{ newPlayer.name }} </td>
+          <td id="rank" class="rankright"> {{ newPlayerRank() }} </td>
+        </tr> -->
       </tbody>
     </table>
     <noplayers ng-hide="players">There are no players</noplayers>
-    <form id="update-rank" class="col-lg-6">
 
+    <form id="update-rank" class="col-lg-6">
       <select ng-init="formData.winner = options[0]" name="winner" class="form-control" ng-model="formData.winner" ng-options="player.name for player in players">
         <option class="form-control-option" value="">Select Player 1 </option>
       </select>
-
       <select ng-init="formData.loser = options[0]" name="loser" class="form-control" ng-model="formData.loser" ng-options="player.name for player in players">
         <option value=""> Select Player 2</option>
       </select>
-
-      <button class="button" type="submit" value="Update Ladder" ng-click="updateLadder()">Swap</button>
+      <button class="button" id="swapbutton"type="submit" value="Update Ladder" ng-click="updateLadder()">Swap</button>
     </form>
-        <form id="addplayer">
+
+        <form id="addplayer" name="addPlayer">
           <div class="input-group">
-            <input id="input_name" name="name" placeholder="Enter Name..." type="text" ng-model="formData.name"/>
-            <button class="button" type="submit" value="Add Player" ng-click="createPlayer(formData)">Add Player</button> 
+            <input id="input_name" name="name" placeholder="Enter Name..." type="text" ng-model="newPlayer.name"/>
+            <button class="button" id="addplayerbutton" type="submit" value="Add Player" ng-click="createPlayer()">Add Player</button> 
           </div>
         </form>
+
   </body>
 </html>
