Angular rendering resource without db query, instant without flicker

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
           <td id="name" ng-bind="player.name"></td>
           <td id="rank" class="rankright" ng-bind="player.rank"></td>
         </tr>
-<!--         <tr id="ladder_row" ng-show="newPlayer.name">
+         <tr id="ladder_row" ng-show="newPlayer.name">
           <td id="rank"> {{ newPlayerRank() }} </td>
           <td id="name"> {{ newPlayer.name }} </td>
           <td id="rank" class="rankright"> {{ newPlayerRank() }} </td>
-        </tr> -->
+        </tr>
       </tbody>
     </table>
     <noplayers ng-hide="players">There are no players</noplayers>
