Test for rank restriction using filter

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script src="/bower_components/angular-resource/angular-resource.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css">
     <script src="js/controllers/main.js"></script>
+    <script src="js/filters/filter.js"></script>
     <script src="js/services/players.js"></script>
     <script src="js/core.js"></script>
     <title>Sports Ladder</title>
